--- a/solution/api/Dockerfile
+++ b/solution/api/Dockerfile
@@ -1,16 +1,12 @@
 FROM golang:1.11.5 as builder
 
 WORKDIR /api
-
 COPY . ./
-
 RUN go get -d -v
-
 RUN CGO_ENABLED=0 GOOS=linux go build -a -o api .
 
 
-FROM alpine:3.8 as runner
-# RUN apk --no-cache add ca-certificates
+FROM debian:9.7-slim as runner
 
 WORKDIR /api
 COPY --from=builder /api/api .
