--- a/solution/docker-compose.yml
+++ b/solution/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 
 services:
-  mongodb:
+  mongo:
     image: mongo:4.0.6
     command: mongod
     ports:
@@ -13,6 +13,21 @@ services:
     build:
       context: mongo-seed
       dockerfile: Dockerfile
+    depends_on:
+      - mongo
+    networks:
+      - infra
+
+  api:
+    build:
+      context: api
+      dockerfile: Dockerfile
+    environment:
+      - MONGODB_URL=mongodb://mongo:27017/titanic
+    ports:
+      - "3000:3000"
+    depends_on:
+      - mongo-seed
     networks:
       - infra
 
