--- a/solution/docker-compose.yml
+++ b/solution/docker-compose.yml
@@ -13,6 +13,8 @@ services:
     build:
       context: mongo-seed
       dockerfile: Dockerfile
+    environment:
+      - MONGODB_URL=mongodb://mongo:27017/titanic
     depends_on:
       - mongo
     networks:
